--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Project1</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Ubuntu:wght@700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body style="padding: 0; margin: 0; border: 0;">
@@ -76,7 +78,7 @@
             line-height: 27px;
             color: #DFDFDF;
             margin: 0;
-            max-width: 413px;">
+            max-width: 413px;" class="animate__animated animate__flash">
                 Enjoy better rates when you trade your bitcoin with
                 <span style="color: #8859EC;">waves</span>
             </p>
