--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     text-decoration: none;
                     ">Sign in</a>
                 </li>
-                <li>
+                <li class="animate__animated animate__shakeY">
                     <a href="#" style="color: #FFFFFF;
                     text-decoration: none;
                     background-color: #8859EC;
